CMAKE_MINIMUM_REQUIRED(VERSION 3.4.1)

# 工程名
SET (PROJECT_NAME simplest-web-server)

PROJECT(${PROJECT_NAME})
 
SET(CMAKE_C_COMPILER "g++")  #选择编译器，默认是gcc
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)
SET(CMAKE_CXX_STANDARD 11)


MESSAGE("工程名: " ${PROJECT_NAME})
MESSAGE("工程目录: " ${PROJECT_SOURCE_DIR})
MESSAGE("编译后可执行程序目录: " ${EXECUTABLE_OUTPUT_PATH})
MESSAGE("编译后库程序文件目录: " ${LIBRARY_OUTPUT_PATH})
 
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)