CMAKE_MINIMUM_REQUIRED(VERSION 3.4.1)

# project
SET(PROJECT_NAME simplest-web-server)
SET(ROOT_CMAKE_PATH ${CMAKE_CURRENT_SOURCE_DIR})

PROJECT(${PROJECT_NAME})

# compile args
SET(CMAKE_C_COMPILER "g++")
SET(CMAKE_CXX_STANDARD 11)

# executable & lib path
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)


# debug
MESSAGE("project name: " ${PROJECT_NAME})
MESSAGE("root cmake path: " ${ROOT_CMAKE_PATH})
MESSAGE("executable output path: " ${EXECUTABLE_OUTPUT_PATH})
MESSAGE("compile output path: " ${LIBRARY_OUTPUT_PATH})
 
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)