# debug
MESSAGE("src compile, path: "  ${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/pool
    ${CMAKE_CURRENT_SOURCE_DIR}/logger
    ${CMAKE_CURRENT_SOURCE_DIR}/timer
    ${CMAKE_CURRENT_SOURCE_DIR}/utils
    ${CMAKE_CURRENT_SOURCE_DIR}/server
    ${CMAKE_CURRENT_SOURCE_DIR}/server/epoll
    ${CMAKE_CURRENT_SOURCE_DIR}/server/http
)

FILE(GLOB_RECURSE SRC_MAIN "./*.cc")
FILE(GLOB_RECURSE SRC_POOL "pool/*.cc")
FILE(GLOB_RECURSE SRC_LOGGER "logger/*.cc")
FILE(GLOB_RECURSE SRC_SERVER "server/*.cc" "server/http/*.cc")

FIND_PACKAGE(Threads)

ADD_LIBRARY(src ${SRC_POOL} ${SRC_LOGGER} ${SRC_SERVER})

ADD_EXECUTABLE(src_bin ${SRC_POOL} ${SRC_LOGGER} ${SRC_SERVER} ${SRC_MAIN})

TARGET_LINK_LIBRARIES(src_bin ${CMAKE_THREAD_LIBS_INIT})
